comitando alteração de título no conteúdo

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aula 4</title>
-  </head> <link rel="stylesheet" href="estilo.css">
+    <title>Aula 457</title>
+  </head>
+  <link rel="stylesheet" href="estilo.css" />
   <body>
     <h1>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem molestias
